<resources>
    <string name="app_name">KeepTracing</string>
    <string name="btn">GO SQL</string>
    <string name="timer_text">00:00:00</string>
    <string name="sauts">Sauts</string>
    <string name="cpt_sauts">0</string>
    <string name="temps_air">Temps en l\'air</string>
    <string name="cpt_temps_air">0</string>
    <string name="max_saut">Saut le plus haut</string>
    <string name="cpt_max_saut">0</string>
    <string name="start_text">Démarrer l\'activité</string>
    <string name="pause_text">Pause</string>
    <string name="resume_text">Reprendre</string>
    <string name="stop_text">Stop</string>
    <string name="month">Example: Septembre</string>
    <string name="nb_activities">Example: 2 activites</string>
    <string name="duration">Temps de sesion: \nexample 00:54:14</string>
    <string name="nb_jumps">Nb Sauts: \nexample 240</string>
</resources>
