<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/history_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DuplicateIds,NotSibling,UselessParent"
        android:id="@+id/activity_info_row"
        android:layout_below="@+id/activity_info_row"
        android:layout_alignParentStart="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:text="@string/duration"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/nbJumps"
            android:layout_width="wrap_content"
            android:text="@string/nb_jumps"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:ignore="DuplicateIds,RelativeOverlap"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DuplicateIds,UselessParent"
        android:id="@+id/activity_info_row"
        android:layout_below="@+id/info_row"
        android:layout_alignParentStart="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/nbJumps"
            android:layout_width="wrap_content"
            android:text="@string/nb_jumps"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:ignore="DuplicateIds,RelativeOverlap"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:text="@string/duration"
            android:layout_height="wrap_content"
            tools:ignore="DuplicateIds"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:background="@drawable/border_bottom"
        tools:ignore="UselessParent"
        android:id="@+id/info_row"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/nbActivities"
            android:layout_width="wrap_content"
            android:text="@string/nb_activities"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:text="@string/month"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_height="30dp" />
    </RelativeLayout>

</RelativeLayout>