<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jankovic.test.MainActivity">


    <Button
        android:text="@string/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:onClick="validate"
        android:id="@+id/btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/timerValue"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#000000"
        android:text="@string/timer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/body">

        <LinearLayout
            android:id="@+id/container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/accelerometer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/acceleroValue"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnStart"
            android:text="@string/start_text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="60dp"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnPause"
            android:text="@string/stop_text"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>
